force-app/main/default/objects/Account/fields/Cantidad_Creditos__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Creditos__c</fullName>
    <label>Cantidad Creditos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>