force-app/main/default/objects/Account/fields/Creditos_Email__c.field-meta.xml
<CustomField>
    <fullName>Creditos_Email__c</fullName>
    <label>Creditos Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>