force-app/main/default/objects/Account/fields/Creditos_IVR__c.field-meta.xml
<CustomField>
    <fullName>Creditos_IVR__c</fullName>
    <label>Creditos IVR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>