force-app/main/default/objects/Account/fields/Creditos_SMS__c.field-meta.xml
<CustomField>
    <fullName>Creditos_SMS__c</fullName>
    <label>Creditos SMS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>