force-app/main/default/objects/Account/fields/Grand_Parent_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Grand_Parent_External_ID__c</fullName>
    <label>Grand Parent External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>