force-app/main/default/objects/Account/fields/Nivel_Administrativo_0__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Administrativo_0__c</fullName>
    <description>Pais</description>
    <inlineHelpText>Pais</inlineHelpText>
    <label>Nivel Administrativo 0</label>
    <length>255</length>
    <type>Text</type>
</CustomField>