force-app/main/default/objects/Account/fields/Nivel_Administrativo_1__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Administrativo_1__c</fullName>
    <description>Nivel Administrativo 1 (Provincia o Equivalente) que corresponde al Territorio</description>
    <inlineHelpText>Nivel Administrativo 1 (Provincia o Equivalente) que corresponde al Territorio</inlineHelpText>
    <label>Nivel Administrativo 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>