force-app/main/default/objects/Account/fields/Nivel_Administrativo_2__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Administrativo_2__c</fullName>
    <description>Nivel Administrativo 2 (Municipio, Departamento o Equivalente) que corresponde al Territorio</description>
    <inlineHelpText>Nivel Administrativo 2 (Municipio, Departamento o Equivalente) que corresponde al Territorio</inlineHelpText>
    <label>Nivel Administrativo 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>