force-app/main/default/objects/Account/fields/Number_of_Barrios__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Barrios__c</fullName>
    <label>Número de Barrios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>