force-app/main/default/objects/Account/fields/Parent_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_External_ID__c</fullName>
    <label>Parent External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>