force-app/main/default/objects/Account/fields/Parent_Territorio_type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Territorio_type__c</fullName>
    <formula>TEXT(Parent.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Territorio Type</label>
    <type>Text</type>
</CustomField>