force-app/main/default/objects/Account/fields/Prosumer_Envialo_Simple_Preview__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Envialo_Simple_Preview__c</fullName>
    <description>Para enviar el preview, hace falta tener una campaña creada. La idea va a ser usar 1 sola por cuenta para los preview y guardar el id aca. Si no tiene Id asociado, se crea y se asigna.</description>
    <inlineHelpText>Para enviar el preview, hace falta tener una campaña creada. La idea va a ser usar 1 sola por cuenta para los preview y guardar el id aca. Si no tiene Id asociado, se crea y se asigna.</inlineHelpText>
    <label>Prosumer Envialo Simple Preview Campain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>