force-app/main/default/objects/Account/fields/Prosumer_Filter_Tags__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Filter_Tags__c</fullName>
    <label>Prosumer Filter Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>