force-app/main/default/objects/Account/fields/Prosumer_Sharing_Id__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Sharing_Id__c</fullName>
    <label>Prosumer Sharing Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>