force-app/main/default/objects/Account/fields/SAQL_Sharing_Criteria__c.field-meta.xml
<CustomField>
    <fullName>SAQL_Sharing_Criteria__c</fullName>
    <label>SAQL Sharing Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>