force-app/main/default/objects/Account/fields/Sharing_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Criteria__c</fullName>
    <label>Sharing Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>