force-app/main/default/objects/Account/fields/TestSHA__c.field-meta.xml
<CustomField>
    <fullName>TestSHA__c</fullName>
    <label>TestSHA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>