force-app/main/default/objects/Account/fields/Total_Number_of_18_24_year_olds__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_18_24_year_olds__c</fullName>
    <label>Total 18 - 24 años</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>