force-app/main/default/objects/Account/fields/Total_Number_of_Child_Jurisdictions__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Child_Jurisdictions__c</fullName>
    <label>Total Jurisdicción de Menores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>