force-app/main/default/objects/Account/fields/Total_Number_of_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Contacts__c</fullName>
    <label>Total Contactos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>