force-app/main/default/objects/Account/recordTypes/Campana.recordType-meta.xml
<RecordType>
    <fullName>Campana</fullName>
    <active>true</active>
    <label>Campaña</label>
</RecordType>