force-app/main/default/objects/Account/recordTypes/Clientes.recordType-meta.xml
<RecordType>
    <fullName>Clientes</fullName>
    <active>true</active>
    <label>Clientes</label>
</RecordType>