force-app/main/default/objects/Account/recordTypes/Communities.recordType-meta.xml
<RecordType>
    <fullName>Communities</fullName>
    <active>true</active>
    <label>Communities</label>
</RecordType>