force-app/main/default/objects/Account/recordTypes/DataSkewAcc.recordType-meta.xml
<RecordType>
    <fullName>DataSkewAcc</fullName>
    <active>true</active>
    <label>DataSkewAcc</label>
</RecordType>