force-app/main/default/objects/Account/recordTypes/Jurisdiccion.recordType-meta.xml
<RecordType>
    <fullName>Jurisdiccion</fullName>
    <active>true</active>
    <description>Territorio Record Type default de Prosumia (Non Managed)</description>
    <label>Jurisdicción</label>
</RecordType>