force-app/main/default/objects/Account/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Record_Type_ID__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>