force-app/main/default/objects/Account/listViews/Distrito_Electoral.listView-meta.xml
<ListView>
    <fullName>Distrito_Electoral</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Total_Number_of_Contacts__c</columns>
    <columns>Total_Number_of_Emails__c</columns>
    <columns>Total_Number_of_Mobiles__c</columns>
    <columns>Total_Number_of_Landlines__c</columns>
    <columns>Total_Number_of_00_15_year_olds__c</columns>
    <columns>Total_Number_of_16_17_year_olds__c</columns>
    <columns>Total_Number_of_18_24_year_olds__c</columns>
    <columns>Total_Number_of_25_39_year_olds__c</columns>
    <columns>Total_Number_of_40_64_year_olds__c</columns>
    <columns>Total_Number_of_65_year_olds__c</columns>
    <columns>Total_Number_of_Males__c</columns>
    <columns>Total_Number_of_Females__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Jurisdiccion</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Distrito Electoral</value>
    </filters>
    <label>Distrito Electoral</label>
    <language>en_US</language>
</ListView>