force-app/main/default/objects/Account/listViews/Nivel_Administrativo_1.listView-meta.xml
<ListView>
    <fullName>Nivel_Administrativo_1</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>Total_Number_of_Contacts__c</columns>
    <columns>Total_Number_of_Emails__c</columns>
    <columns>Total_Number_of_Mobiles__c</columns>
    <columns>Total_Number_of_Landlines__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>0126A0000003Wcp</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Nivel Administrativo 1</value>
    </filters>
    <label>Provincia</label>
</ListView>